hard-gists/4073599/run.log
=== Docker Run Log for 4073599 ===
Started at: Mi 29. Okt 14:19:15 CET 2025

[2025-10-29 14:19:16] START: Running container for 4073599
[2025-10-29 14:19:16] SUCCESS: Container 7a7d527e24e2cf16514f93afea471b7bf36ca83d4a8220b366e19a61278dbc19 started for 4073599
=== Container logs for 4073599 ===
  File "/snippet.py", line 34
    print 'Connecting...'
    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4073599 ===
[2025-10-29 14:19:18] INFO: Container 7a7d527e24e2cf16514f93afea471b7bf36ca83d4a8220b366e19a61278dbc19 has stopped
